# gpu_joins

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cpu_instc
report/: Joins On GPU.md
souffle_examples/: intsc  intsc.cpp  intsc.dl
souffle_examples/input/: graph1.facts  graph2.facts  graph3.facts
souffle_examples/output/: intsc.csv
src/: cpu_hash_table.cpp  cpu_intsc.cpp  cpu_join.cpp  lord.cu  lord.cuh  save.cpp  todo
src/GPU/: CMakeLists.txt  Makefile  binary_join.cu  exception.cuh  gen_graph.py  gpu_join.cu  gpu_join_kernels.cuh  gpu_rel  gpu_rel.cu  graph.cuh  graph_intersect.cu  graph_intersect_once.cu  graph_utilities.cuh  hisa.cu  intersect_cpu.cpp  join.cu  join_rel.cu  kernels.cuh
src/GPU/tests/: data_1000.txt  data_10000.txt  data_300.txt  star_6_5.txt  triangle.txt
